@@ -1340,6 +1340,13 @@ name|i
 index|]
 operator|==
 name|ch
+operator|&&
+name|Character
+operator|.
+name|isLetter
+argument_list|(
+name|ch
+argument_list|)
 condition|)
 name|len
 operator|=
@@ -1446,6 +1453,18 @@ name|len
 operator|-
 literal|2
 index|]
+operator|&&
+name|Character
+operator|.
+name|isLetter
+argument_list|(
+name|s
+index|[
+name|len
+operator|-
+literal|1
+index|]
+argument_list|)
 condition|)
 name|len
 operator|--
